--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.redis.database=0
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=536f89bc-715f-4805-a32e-f44170060448
-spring.redis.timeout=60000
+spring.data.redis.database=0
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=536f89bc-715f-4805-a32e-f44170060448
+spring.data.redis.timeout=60000
